<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpura_claro">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/hucha" />

    <TextView
        android:id="@+id/textViewConversor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/TextViewConversor"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextNumberMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/EditTexrNumber"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConversor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/TextViewMoneda"
        android:textColor="@color/rojo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberMonto" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="131dp"
        android:layout_height="152dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButtonDolar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonDolar"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonEuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonEuro"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonReal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonReal"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/buttonConvertir"
        app:layout_constraintEnd_toStartOf="@+id/buttonReiniciarResultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberResultado" />

    <Button
        android:id="@+id/buttonReiniciarResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/buttonReiniciarResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonConvertir"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberResultado" />

    <EditText
        android:id="@+id/editTextNumberResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/EditTextNumberResultado"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>