<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpura_claro"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSuma"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/suma"
        app:layout_constraintEnd_toStartOf="@+id/buttonResta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonResta"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/resta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSuma"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonIncrementarZoom"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/IncrementarZoom"
        app:layout_constraintEnd_toStartOf="@+id/buttonDecrementarZoom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSuma" />

    <Button
        android:id="@+id/buttonDecrementarZoom"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/DecrementarZoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonIncrementarZoom"
        app:layout_constraintTop_toBottomOf="@+id/buttonResta" />

    <Button
        android:id="@+id/buttonOcultar"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/ocultar"
        app:layout_constraintEnd_toStartOf="@+id/buttonReiniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIncrementarZoom" />

    <Button
        android:id="@+id/buttonReiniciar"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/reiniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonOcultar"
        app:layout_constraintTop_toBottomOf="@+id/buttonDecrementarZoom" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/hucha" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/TexView"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>